STYLE: Ensured that the min-height for the background image of the game board is at least 100vh but covers the height of the container. This makes it easier to format content sizes for various devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,7 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_buttons_animate3 *
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
+    min-height: 100vh;
     height: 100%;
 }
 
